burger-menu was added

--- a/src/index.html
+++ b/src/index.html
@@ -13,7 +13,7 @@
     <header class="header" id="page-top">
       <div class="container">
         <div class="header__nav">
-          <a href="#" class="header__menu-opener"></a>
+          <a href="#menu" class="header__menu-opener"></a>
           <a href="#" class="header__logo">
             <img src="images/logo.svg" alt="Museum">
           </a>
@@ -46,6 +46,34 @@
         </div>
       </div>
     </header>
+    <nav class="page__menu menu" id="menu">
+      <div class="container">
+        <div class="menu__nav">
+          <a href="#" class="header__menu-opener"></a>
+          <a href="#" class="menu__logo">
+            <img src="images/logo.svg" alt="Museum">
+          </a>
+          <a href="#" class="menu__cross"></a>
+        </div>
+        <ul class="menu__list">
+          <li class="menu__item">
+            <a href="#" class="menu__link">Головна</a>
+          </li>
+          <li class="menu__item">
+            <a href="#events" class="menu__link">Актуальні події</a>
+          </li>
+          <li class="menu__item">
+            <a href="#gallery" class="menu__link">Галерея</a>
+          </li>
+          <li class="menu__item">
+            <a href="#subscription" class="menu__link">Підписка</a>
+          </li>
+          <li class="menu__item">
+            <a href="#contacts" class="menu__link">Контакти</a>
+          </li>
+        </ul>
+      </div>
+    </nav>
     <main>
       <div class="page__section-1" id="events">
         <div class="container">
@@ -165,7 +193,7 @@
           </div>
         </div>
       </div>
-      <div class="page__section-3">
+      <div class="page__section-3" id="subscription">
         <div class="container">
           <div class="page__section-3__title">Підписка</div>
           <div class="page__section-3__subtitle">Бути в курсі всіх актуальних подій та останніх новин.</div>
@@ -337,7 +365,7 @@
         </div>
       </div>
     </main>
-    <footer class="footer">
+    <footer class="footer" hidden>
       <div class="footer-container">
         <div class="footer__information">
           <div>Designed by Zhyriada Marina</div>
