--- a/src/index.html
+++ b/src/index.html
@@ -1,13 +1,46 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" class="page">
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Title</title>
+    <title>Ma MU</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin="true">
+    <link
+      href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@300;400;500;600&family=Montserrat:wght@400;700&display=swap"
+      rel="stylesheet">
     <link rel="stylesheet" href="./styles/main.scss">
   </head>
-  <body>
-    <h1>Hello Mate Academy</h1>
+  <body class="page__body">
+    <header class="header" id="top">
+      <div class="header__image-preview">
+        <!-- <img src="images/header/header-image.png" alt="image" class="header__image"> -->
+      </div>
+
+      <div class="container">
+        <div class="header__content">
+          <div class="header__nav">
+
+            <a href="#menu" class="header__menu-opener"></a>
+            git push origin develop
+            <a href="#" class="logo">
+              <img src="images/logo/logo.svg" alt=" logo" class="logo__image">
+            </a>
+          </div>
+        </div>
+
+        <div class="header__flex-container">
+          <h1 class="header__title">
+            ХУДОЖНІЙ<br> МУЗЕЙ
+          </h1>
+
+          <a href="#tickets" class="button link">
+            КВИТКИ
+          </a>
+        </div>
+      </div>
+      </div>
+    </header>
     <script type="text/javascript" src="scripts/main.js"></script>
   </body>
 </html>
