15% is done new

--- a/src/index.html
+++ b/src/index.html
@@ -22,7 +22,6 @@
           <div class="header__nav">
 
             <a href="#menu" class="header__menu-opener"></a>
-            git push origin develop
             <a href="#" class="logo">
               <img src="images/logo/logo.svg" alt=" logo" class="logo__image">
             </a>
@@ -34,7 +33,7 @@
             ХУДОЖНІЙ<br> МУЗЕЙ
           </h1>
 
-          <a href="#tickets" class="button link">
+          <a href="#tickets" class="header__button">
             КВИТКИ
           </a>
         </div>
