--- a/src/index.html
+++ b/src/index.html
@@ -3,11 +3,521 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Title</title>
+    <title>Художній музей</title>
+    <link rel="shortcut icon" href="./images/favicon.png" type="image/png">
     <link rel="stylesheet" href="./styles/main.scss">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@300;400;500;700&family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
+    
   </head>
-  <body>
-    <h1>Hello Mate Academy</h1>
+  <body class="page page__body">
+    <header class="header" id="header">
+      <div class="container container__header">
+        <a href="#menu" class="icon icon--menu"></a>
+
+        <div class="logo">
+          Na
+          <br>
+          Mu
+        </div>
+      </div>
+    </header>
+
+    <nav class="page__menu menu" id="menu">
+      <div class="container">
+        <div class="menu__content">
+          <div class="menu__top top-actions">
+            <a href="#" class="icon icon--cross"></a>
+
+            <div class="logo logo__menu">
+              Na
+              <br>
+              Mu
+            </div>
+          </div>
+
+          <ul class="menu__list">
+            <li class="menu__item">
+              <a href="#gallery" class="menu__link">Галерея</a>
+            </li>
+
+            <li class="menu__item">
+              <a href="#events" class="menu__link">Виставки та події</a>
+            </li>
+
+            <li class="menu__item">
+              <a href="#subscription" class="menu__link">Про нас</a>
+            </li>
+
+            <li class="menu__item">
+              <a href="#contacts" class="menu__link">Контакти</a>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </nav>
+
+    <main>
+      <section class="museum">
+        <div class="grid grid--mobile">
+          <div class="
+            grid__item
+            grid__item-tablet--4-6
+            grid__item-desktop--6-12
+          ">
+            <img
+              src="./images/natsionalnij-hudozhnij-muzej.png"
+              alt="Національний художній музей"
+              class="museum--img"
+            >
+          </div>
+
+          <div class="
+            grid__item
+            grid__item-tablet--1-3
+            grid__item-tablet--1-3_museum
+            grid__item-desktop--1-5
+          ">
+            <div class="container container__museum">
+              <h1 class="museum__title">
+                Художній музей
+              </h1>
+
+              <a href="#events" class="ticket">
+                <div class="ticket__text">
+                  Квитки
+                </div>
+
+                <div class="ticket__arrow">
+                  <img src="./images/arrow/ticket-arrow.svg" alt="Стрілочка" class="ticket__arrow--img">
+                </div>
+              </a>
+
+              <a href="#events">
+                <div class="museum__action">
+                  <div class="museum__action--stick"></div>
+
+                  <div class="museum__action--title">
+                    Події
+                  </div>
+                </div>
+              </a>
+            </div>
+          </div>
+        </div>
+      </section>
+
+      <section class="events page__section" id="events">
+        <div class="grid grid--mobile">
+          <div class="
+            container
+            grid
+            grid--mobile
+            grid__item
+            grid__item-tablet--1-6
+            grid__item-desktop--1-12
+          ">
+            <h2 class="
+              title
+              grid__item
+              grid__item-tablet--1-6
+              grid__item-desktop--1-12
+            ">
+              Актуальні події
+            </h2>
+
+            <div class="
+              events__exhibition
+              grid
+              grid--mobile
+              grid__item
+              grid__item-tablet--1-6
+              grid__item-desktop--1-12
+            ">
+              <img
+                src="./images/events/event_1.png"
+                alt="Ілюстрація події"
+                class="
+                  events__exhibition--img
+                  grid__item
+                  grid__item-tablet--1-6
+                  grid__item-desktop--1-7"
+              >
+
+              <div class="
+                events__exhibition--data
+                grid__item
+                grid__item-tablet--1-4
+                grid__item-desktop--9-12
+              ">
+                <div class="events__exhibition--type">
+                  <div class="events__exhibition--type-title">
+                    Виставка
+                  </div>
+
+                  <div class="events__exhibition--type-date">
+                    26.08-29.11.2019
+                  </div>
+                </div>
+
+                <div class="events__exhibition--name">
+                  <h3 class="events__exhibition--name-title">
+                    Йду і повертаюсь
+                  </h3>
+
+                  <img
+                    src="./images/red_square.svg"
+                    alt="Червоний квадрат"
+                    class="events__exhibition--name-img"
+                  >
+                </div>
+
+                <div class="events__exhibition--text">
+                  Національний Художній Музей України презентує унікальну частину колекції Градобанку - українське мистецтво другої половини 1980-1995 років.
+                </div>
+              </div>
+            </div>
+
+            <div class="
+              events__exhibition
+              grid
+              grid--mobile
+              grid__item
+              grid__item-tablet--1-6
+              grid__item-desktop--1-12
+            ">
+              <img
+                src="./images/events/event_2.png"
+                alt="Ілюстрація події"
+                class="
+                  events__exhibition--img
+                  grid__item
+                  grid__item-tablet--1-6
+                  grid__item-desktop--1-7"
+              >
+
+              <div class="
+                events__exhibition--data
+                grid__item
+                grid__item-tablet--1-4
+                grid__item-desktop--9-12
+              ">
+                <div class="events__exhibition--type">
+                  <div class="events__exhibition--type-title">
+                    Виставка
+                  </div>
+
+                  <div class="events__exhibition--type-date">
+                    26.08-29.11.2019
+                  </div>
+                </div>
+
+                <div class="events__exhibition--name">
+                  <h3 class="events__exhibition--name-title">
+                    І спогади і мрії
+                  </h3>
+
+                  <img
+                    src="./images/red_square.svg"
+                    alt="Червоний квадрат"
+                    class="events__exhibition--name-img"
+                  >
+                </div>
+
+                <div class="events__exhibition--text">
+                  Національний художній музей України до 100 річчя від дня народження   видатної української художниці  Тетяни Яблонської  відкриває ретроспективну ювілейну виставку «І спогади і мрії».
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div class="
+            events__lecture
+            grid__item
+            grid__item-tablet--1-6
+            grid__item-desktop--1-12
+          ">
+            <img
+              src="./images/events/event_3.png"
+              alt="Лекція"
+              class="events__lecture--img"
+            >
+
+            <div class="events__lecture--data">
+              <div class="events__lecture--type">
+                <div class="events__exhibition--type-title">
+                  Лекція
+                </div>
+
+                <div class="events__exhibition--type-date">
+                  26/08/2019 - 11:00
+                </div>
+              </div>
+
+              <h3 class="events__lecture--title events__exhibition--name-title">
+                Від класицизму до романтизму
+              </h3>
+            </div>
+          </div>
+        </div>
+      </section>
+
+      <section class="gallery page__section" id="gallery">
+        <div class="container">
+          <h2 class="title">
+            Галерея
+          </h2>
+        </div>
+
+        <div class="slider">
+          <div class="
+            container
+            container__gallery
+            grid
+            grid--mobile
+          ">
+            <img
+              src="./images/gallery/gallery_1.png"
+              alt="Картина 1"
+              class="
+                slider__item
+                gallery__img
+                grid__item
+                grid__item-desktop--1-4"
+            >
+
+            <img
+              src="./images/gallery/gallery_2.png"
+              alt="Картина 2"
+              class="
+                slider__item
+                gallery__img
+                grid__item
+                grid__item-desktop--5-12"
+            >
+
+            <img
+              src="./images/gallery/gallery_3.png"
+              alt="Картина 3"
+              class="
+                slider__item
+                gallery__img
+                gallery__img-1
+                grid__item
+                grid__item-desktop--1-8"
+            >
+
+            <img
+              src="./images/gallery/gallery_4.png"
+              alt="Картина 4"
+              class="
+                slider__item
+                gallery__img
+                gallery__img-1
+                grid__item
+                grid__item-desktop--9-12"
+            >
+          </div>
+
+          <ul class="slider__control">
+            <li class="slider__button"></li>
+            <li class="slider__button"></li>
+            <li class="slider__button"></li>
+            <li class="slider__button"></li>
+          </ul>
+        </div>
+      </section>
+
+      <section class="subscription" id="subscription">
+        <div class="form">
+          <h1 class="title form__title">
+            Підписка
+          </h1>
+
+          <div class="form__text">
+            Бути в курсі всіх актуальних подій та останніх новин.
+          </div>
+
+          <form
+            action="#"
+            id="form"
+            method="get"
+            class="form__fields"
+          >
+            <label>
+              <input
+                type="email"
+                name="email"
+                placeholder="E-mail"
+                class="form__field"
+                required
+              >
+            </label>
+
+            <button
+              type="submit"
+              class="form__button"
+              form="form"
+            >
+              <img
+                src="./images/arrow/form-arrow.svg"
+                alt="Стрілочка"
+                class="form__arrow--img"
+              >
+            </button>
+          </form>
+        </div>
+      </section>
+    </main>
+
+    <footer class="footer">
+      <div class="
+        container
+        grid
+        grid--mobile
+      ">
+        <div class="
+          footer__icons
+          grid__item
+          grid__item-tablet--1-1
+          grid__item-desktop--1-1
+        ">
+          <div class="logo logo--footer">
+            Na
+            <br>
+            Mu
+          </div>
+
+          <div class="social">
+            <a
+              href="https://www.facebook.com/"
+              class="social__link"
+              target="_blank"
+            >
+              <img src="./images/social/fb.svg" alt="Facebook">
+            </a>
+
+            <a
+              href="https://instagram.com/"
+              class="social__link"
+              target="_blank"
+            >
+              <img src="./images/social/insta.svg" alt="Instagram">
+            </a>
+          </div>
+        </div>
+
+        <div class="
+          footer__contacts
+          grid__item
+          grid__item-tablet--2-5
+          grid__item-desktop--3-6"
+          id="contacts"
+        >
+          <div class="footer__text footer__text--contacts">
+            Графік роботи<br>
+            <br>
+            <span class="footer__text--bold">12:00 — 20:00</span> середа<br>
+            <span class="footer__text--bold">12:00 — 20:00</span> четвер<br>
+            <span class="footer__text--bold">12:00 — 20:00</span> пятниця<br>
+            <span class="footer__text--bold">11:00 — 19:00</span> субота<br>
+            <span class="footer__text--bold">11:00 — 19:00</span> неділя<br>
+            <br>
+            <span class="footer__text--bold">Вихідні</span> понеділок, вівторок<br>
+            Каса припиняє роботу за 1 годину до закриття музею
+          </div>
+
+          <div class="footer__text footer__text--contacts">
+            Контакти:<br>
+            <br>
+            вул. М. Грушевського, 6; Київ, 01001<br>
+            тел. +38 (044) 278-13-57<br>
+            факс +38 (044) 278-74-54<br>
+            e-mail: info@namu.kiev.ua<br>
+          </div>
+        </div>
+
+        <a href="#header" class="footer__link-up">
+          <div class="footer__up">
+            <img src="./images/arrow/footer_arrow.svg" alt="Вгору">
+          </div>
+        </a>
+
+        <div class="
+          footer__strip
+          grid__item
+          grid__item-tablet--2-5
+          grid__item-desktop--7-7
+        "></div>
+
+        <nav class="
+          footer__menu
+          grid__item
+          grid__item-tablet--1-6
+          grid__item-desktop--8-11
+        ">
+          <ul class="
+            footer__menu--list
+            grid
+            grid--mobile
+          ">
+            <ul class="
+              footer__menu--list-1
+              grid__item
+              grid__item-tablet--2-3
+              grid__item-desktop--1-6
+            ">
+              <li class="footer__menu--item">
+                <a href="#gallery" class="footer__text footer__menu--link">
+                  Галерея
+                </a>
+              </li>
+
+              <li class="footer__menu--item">
+                <a href="#events" class="footer__text footer__menu--link">
+                  Виставки та події
+                </a>
+              </li>
+            </ul>
+
+            <ul class="
+              footer__menu--list-1
+              grid__item
+              grid__item-tablet--4-5
+              grid__item-desktop--7-12
+            ">
+              <li class="footer__menu--item">
+                <a href="#subscription" class="footer__text footer__menu--link">
+                  Про Нас
+                </a>
+              </li>
+
+              <li class="footer__menu--item">
+                <a href="#contacts" class="footer__text footer__menu--link">
+                  Контакти
+                </a>
+              </li>
+            </ul>
+          </ul>
+        </nav>
+
+        <div class="
+          footer__copyright
+          grid__item
+          grid__item-tablet--1-6
+          grid__item-desktop--1-12
+        ">
+          <div class="footer__text footer__text--copyright">
+            Copyright © 2019. All Rights Reserved.
+          </div>
+
+          <div class="footer__text footer__text--copyright">
+            Designed by Zhyriada Marina
+          </div>
+        </div>
+      </div>
+    </footer>
     <script type="text/javascript" src="scripts/main.js"></script>
   </body>
 </html>
