--- a/src/index.html
+++ b/src/index.html
@@ -395,7 +395,16 @@
               class="social__link"
               target="_blank"
             >
-              <img src="./images/social/fb.svg" alt="Facebook">
+              <svg
+                class="social__img"
+                width="12"
+                height="24"
+                viewBox="0 0 12 24"
+                fill="none"
+                xmlns="http://www.w3.org/2000/svg"
+              >
+                <path d="M2.80696 4.64899C2.80696 5.2538 2.80696 7.9533 2.80696 7.9533H0.389893V11.9938H2.80696V24.0009H7.77214V11.9942H11.104C11.104 11.9942 11.416 10.0568 11.5673 7.93841C11.1336 7.93841 7.79091 7.93841 7.79091 7.93841C7.79091 7.93841 7.79091 5.58776 7.79091 5.17573C7.79091 4.76282 8.33227 4.2074 8.86733 4.2074C9.40138 4.2074 10.5286 4.2074 11.5725 4.2074C11.5725 3.65727 11.5725 1.75647 11.5725 0.000976577C10.1788 0.000976577 8.59328 0.000976577 7.89437 0.000976577C2.68423 0.000697581 2.80696 4.04524 2.80696 4.64899Z" fill="black">
+              </svg>
             </a>
 
             <a
@@ -403,7 +412,16 @@
               class="social__link"
               target="_blank"
             >
-              <img src="./images/social/insta.svg" alt="Instagram">
+              <svg
+              class="social__img"
+                width="25"
+                height="24"
+                viewBox="0 0 25 24"
+                fill="none"
+                xmlns="http://www.w3.org/2000/svg"
+              >
+                <path d="M17.5908 0H6.58397C3.0017 0 0.0874023 2.9143 0.0874023 6.49657V17.5036C0.0874023 21.0857 3.0017 24 6.58397 24H17.591C21.1731 24 24.0874 21.0857 24.0874 17.5036V6.49657C24.0874 2.9143 21.1731 0 17.5908 0V0ZM12.0874 18.5623C8.46886 18.5623 5.52507 15.6185 5.52507 12C5.52507 8.38145 8.46886 5.43767 12.0874 5.43767C15.7059 5.43767 18.6497 8.38145 18.6497 12C18.6497 15.6185 15.7059 18.5623 12.0874 18.5623ZM18.8066 6.98528C17.7373 6.98528 16.8675 6.11553 16.8675 5.04619C16.8675 3.97686 17.7373 3.10693 18.8066 3.10693C19.8759 3.10693 20.7459 3.97686 20.7459 5.04619C20.7459 6.11553 19.8759 6.98528 18.8066 6.98528Z" fill="black">
+              </svg>
             </a>
           </div>
         </div>
@@ -416,25 +434,57 @@
           id="contacts"
         >
           <div class="footer__text footer__text--contacts">
-            Графік роботи<br>
-            <br>
-            <span class="footer__text--bold">12:00 — 20:00</span> середа<br>
-            <span class="footer__text--bold">12:00 — 20:00</span> четвер<br>
-            <span class="footer__text--bold">12:00 — 20:00</span> пятниця<br>
-            <span class="footer__text--bold">11:00 — 19:00</span> субота<br>
-            <span class="footer__text--bold">11:00 — 19:00</span> неділя<br>
-            <br>
-            <span class="footer__text--bold">Вихідні</span> понеділок, вівторок<br>
-            Каса припиняє роботу за 1 годину до закриття музею
+            <div class="footer__text--title">
+              Графік роботи
+            </div>
+
+            <ul class="footer__text--schedule">
+              <li class="footer__text--schedule-item">
+                <span class="footer__text--bold">12:00 — 20:00</span> середа
+              </li>
+              <li class="footer__text--schedule-item">
+                <span class="footer__text--bold">12:00 — 20:00</span> четвер
+              </li>
+              <li class="footer__text--schedule-item">
+                <span class="footer__text--bold">12:00 — 20:00</span> пятниця
+              </li>
+              <li class="footer__text--schedule-item">
+                <span class="footer__text--bold">11:00 — 19:00</span> субота
+              </li>
+              <li class="footer__text--schedule-item">
+                <span class="footer__text--bold">11:00 — 19:00</span> неділя
+              </li>
+              <li class="footer__text--schedule-item">
+                <span class="footer__text--bold">Вихідні</span> понеділок, вівторок<br>
+                Каса припиняє роботу за 1 годину до закриття музею
+              </li>
+            </ul>
           </div>
 
           <div class="footer__text footer__text--contacts">
-            Контакти:<br>
-            <br>
-            вул. М. Грушевського, 6; Київ, 01001<br>
-            тел. +38 (044) 278-13-57<br>
-            факс +38 (044) 278-74-54<br>
-            e-mail: info@namu.kiev.ua<br>
+            <div class="footer__text--title">
+              Контакти:
+            </div>
+
+            <a
+              href="https://goo.gl/maps/6nquFtpzdDNqCJw39"
+              target="_blank"
+              class="footer__text--contacts-link"
+            >
+              вул. М. Грушевського, 6; Київ, 01001
+            </a>
+
+            <a href="tel: +380442781357" class="footer__text--contacts-link">
+              тел. +38 (044) 278-13-57
+            </a>
+
+            <a href="fax: +380442787454" class="footer__text--contacts-link">
+              факс +38 (044) 278-74-54
+            </a>
+
+            <a href="mailto: info@namu.kiev.ua" class="footer__text--contacts-link">
+              e-mail: info@namu.kiev.ua
+            </a>
           </div>
         </div>
 
