--- a/src/index.html
+++ b/src/index.html
@@ -3,11 +3,96 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Title</title>
+    <title>NA MU</title>
     <link rel="stylesheet" href="./styles/main.scss">
+    <link rel="icon" href="./images/logo.png">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin="anonymous">
+    <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@400;500;700&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin="anonymous">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   </head>
   <body>
-    <h1>Hello Mate Academy</h1>
+
+    <header class="header">
+      <div class="container grid container--header">
+        
+
+        <a href="#" class="header__link header__link--menu grid__item grid__item--1-2">
+          <img src="./images/menu.png" alt="menu" class="header__icon">
+        </a>
+
+        <a href="#" class="header__link header__link--logo  grid__item grid__item--6-7">
+          <img src="./images/logo.png" alt="menu" class="header__icon">
+        </a>
+
+        <nav class="header__mobile-nav">
+          <div class="header__mobile-flex">
+            <a href="#" class="header__mobile-link header__mobile-link--menu">
+              <img src="./images/menu.png" alt="menu" class="header__icon">
+            </a>
+            <a href="#" class="header__mobile-link header__mobile-link--logo">
+              <img src="./images/logo.png" alt="menu" class="header__icon">
+            </a>
+          </div>
+        </nav>
+
+        <div class="header__left grid__item grid__item--1-5">
+          <h1 class="header__title">ХУДОЖНІЙ МУЗЕЙ</h1>
+
+          <div class="header__button">
+            <a href="#" class="wrapper header__button header__button--1 btn-0"><span>КВИТКИ</span></a>
+            <a href="#" class="header__button header__button--2 btn-0">
+              <p class="header__button-text">></p>
+            </a>
+          </div>
+          <p class="header__suptitle">ПОДІЇ</p>
+          <div class="header__line"></div>
+        </div>
+        
+      </div>
+    </header>
+
+    <main>
+      <section class="actual">
+        <div class="container">
+          <div class="grid">
+            <h2 class="actual__title grid__item grid__item--1-5">Актуальні події</h2>
+          </div>
+
+          <div class="actual__card card grid">
+            <img src="./images/card1.jpg" alt="img" class="card__img grid__item grid__item--1-7">
+
+            <div class="card__info grid__item grid__item--9-12">
+              <p class="card__subtitle">ВИСТАВКА</p>
+              <p class="card__date">26.08-29.11.2019</p>
+              <h3 class="card__title">Йду і повертаюсь
+              </h3>
+              <p class="card__text">Національний Художній Музей України презентує унікальну частину колекції Градобанку - українське мистецтво другої половини 1980-1995 років.</p>
+            </div>
+
+          </div>
+
+          <div class="actual__card card grid">
+            <img src="./images/card2.jpg" alt="img" class="card__img grid__item grid__item--1-7">
+
+            <div class="card__info grid__item grid__item--9-12">
+              <p class="card__subtitle">ВИСТАВКА</p>
+              <p class="card__date">226.08-29.11.2019</p>
+              <h3 class="card__title">І спогади і мрії
+              </h3>
+              <p class="card__text">Національний художній музей України до 100 річчя від дня народження   видатної української художниці  Тетяни Яблонської  відкриває ретроспективну ювілейну виставку «І спогади і мрії».</p>
+            </div>
+
+          </div>
+
+        </div>
+
+      </section>
+    </main>
+
     <script type="text/javascript" src="scripts/main.js"></script>
   </body>
 </html>
