little changes added

--- a/src/index.html
+++ b/src/index.html
@@ -22,7 +22,7 @@
           <div class="header__nav">
             <a href="#menu" class="header__menu-opener"></a>
 
-            <a href="/" class="logo">
+            <a href="https://maxxnikiforov.github.io/Museum/" class="logo">
               <img
                 class="logo__img"
                 src="./images/logo.png"
@@ -200,7 +200,7 @@
 
       <footer class="footer">
         <div class="footer__social-media">
-          <a href="https://namumuseum.business.site/">
+          <a href="https://maxxnikiforov.github.io/Museum/">
             <img
               class="logo-M"
               src="./images/logo.png"
