--- a/src/index.html
+++ b/src/index.html
@@ -14,32 +14,411 @@
   <body class="page__body">
     <header class="header" id="top">
       <div class="header__image-preview">
-        <!-- <img src="images/header/header-image.png" alt="image" class="header__image"> -->
+        <a href="#menu" class="icon__menu-opener header__menu-opener--phone icon">
+        </a>
+        <a href="#" class="header__logo header__logo--preview logo">
+          <img
+            src="images/logo/logo.svg"
+            alt="logo"
+            class="logo__image"
+          >
+        </a>
       </div>
 
       <div class="container">
         <div class="header__content">
-          <div class="header__nav">
-
-            <a href="#menu" class="header__menu-opener"></a>
-            <a href="#" class="logo">
-              <img src="images/logo/logo.svg" alt=" logo" class="logo__image">
-            </a>
-          </div>
+          <a href="#menu" class="icon__menu-opener header__menu-opener--tablet icon">
+          </a>
         </div>
 
         <div class="header__flex-container">
-          <h1 class="header__title">
+          <h1 class="header__title margin-title">
             ХУДОЖНІЙ<br> МУЗЕЙ
           </h1>
 
-          <a href="#tickets" class="header__button">
-            КВИТКИ
-          </a>
+          <button
+            type="button"
+            class="header__button button"
+            onclick="window.location.href ='#current-events';"
+          >
+            <span class="button__text">КВИТКИ</span>
+            <span class="button__icon">
+            </span>
+          </button>
+          <div class="header__events">Події</div>
+
         </div>
       </div>
-      </div>
     </header>
+
+    <nav class="page__menu menu" id="menu">
+      <div class="container">
+        <div class="menu__content">
+
+          <div class="menu__top">
+            <a href="#" class="menu__menu-close icon">
+            </a>
+
+            <svg
+              class="logo__svg"
+              width="58" height="63"
+              viewBox="0 0 58 63"
+              xmlns="http://www.w3.org/2000/svg"
+            >
+              <path
+                d="M26.7816 0.799998V26H21.9936L9.42964 10.7V26H3.66964V0.799998H8.49364L21.0216 16.1V0.799998H26.7816ZM49.3399 20.6H37.6399L35.4079 26H29.4319L40.6639 0.799998H46.4239L57.6919 26H51.5719L49.3399 20.6ZM47.5039 16.172L43.5079 6.524L39.5119 16.172H47.5039ZM23.543 62L23.507 46.88L16.091 59.336H13.463L6.08305 47.204V62H0.611047V36.8H5.43505L14.867 52.46L24.155 36.8H28.943L29.015 62H23.543ZM46.1899 62.432C42.5899 62.432 39.7819 61.436 37.7659 59.444C35.7739 57.452 34.7779 54.608 34.7779 50.912V36.8H40.6099V50.696C40.6099 55.208 42.4819 57.464 46.2259 57.464C48.0499 57.464 49.4419 56.924 50.4019 55.844C51.3619 54.74 51.8419 53.024 51.8419 50.696V36.8H57.6019V50.912C57.6019 54.608 56.5939 57.452 54.5779 59.444C52.5859 61.436 49.7899 62.432 46.1899 62.432Z">
+            </svg>
+          </div>
+
+          <ul class="menu__navigation">
+            <li class="menu__item">
+              <a href="#current-events" class="menu__link">
+                Актуальні події
+              </a>
+            </li>
+            <li class="menu__item">
+              <a href="#gallery" class="menu__link">
+                Галерея
+              </a>
+            </li>
+            <li class="menu__item">
+              <a href="#subscription" class="menu__link">
+                Підписка
+              </a>
+            </li>
+            <li class="menu__item">
+              <a href="#contacts" class="menu__link">
+                КОНТАКТИ
+              </a>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </nav>
+
+    <main class="main" id="page-top">
+      <div class="container">
+        <section class="current-events" id="current-events">
+          <h2 class="current-events__title">
+            Актуальні події
+          </h2>
+
+          <div class="current-events__examples">
+            <div class="current-events__first grid grid--not-desktop">
+              <img src="images/section-events/event-1.png" alt="part of the collection of Gradobank - Ukrainian art"
+                class="current-events__image grid__item--desktop-1-7">
+
+              <div class="current-events__description events grid__item--desktop-9-12">
+                <p class="current-events__exhibition mini-info">ВИСТАВКА
+                  <span class="current-events__data">26.08-29.11.2019</span>
+                </p>
+
+                <h3 class="current-events__subtitle">
+                  Йду і повертаюсь
+                </h3>
+
+                <p class="current-events__preview">
+                  Національний Художній Музей України презентує унікальну частину колекції Градобанку - українське
+                  мистецтво другої половини 1980-1995 років.
+                </p>
+              </div>
+            </div>
+
+            <div class="current-events__second grid grid--not-desktop">
+              <img
+                src="images/section-events/event-2.png"
+                alt="exhibition Both Memories and Dreams"
+                class="current-events__image grid__item--desktop-1-7"
+              >
+
+              <div class="current-events__description events grid__item--desktop-9-12">
+                <p class="current-events__exhibition mini-info">ВИСТАВКА <span
+                    class="current-events__data data">26.08-29.11.2019</span>
+                </p>
+
+                <h3 class="current-events__subtitle">
+                  І спогади і мрії
+                </h3>
+
+                <p class="current-events__preview">
+                  Національний художній музей України до 100 річчя від дня народження видатної української художниці
+                  Тетяни Яблонської відкриває ретроспективну ювілейну виставку «І спогади і мрії».
+                </p>
+              </div>
+            </div>
+          </div>
+        </section>
+      </div>
+
+      <section class="advertisement">
+        <div class="advertisement__image">
+        </div>
+        <div class="container">
+          <div class="advertisement__content">
+            <div class="advertisement__info">
+
+              <div class="advertisement__min-info">
+
+                <p class="advertisement__lecture mini-info">ЛЕКЦІЯ
+                </p>
+                <p class="advertisement__data data">
+                  26/08/2019 - 11:00
+                </p>
+
+              </div>
+
+              <h3 class="advertisement__title">
+                Від класицизму до<br>романтизму
+              </h3>
+            </div>
+          </div>
+        </div>
+      </section>
+
+      <section class="gallery" id="gallery">
+        <div class="container">
+          <h2 class="gallery__title">
+            Галерея
+          </h2>
+
+          <div class="gallery-mini">
+            <img
+              src="images/gallery/gallery-mini.jpg"
+              alt="#"
+              class="gallery-mini__image slider-image"
+            >
+
+            <div class="scroll">
+              <div class="scroll__item"></div>
+              <div class="scroll__item"></div>
+              <div class="scroll__item"></div>
+              <div class="scroll__item"></div>
+            </div>
+          </div>
+
+          <div class="gallery-middle grid">
+            <img
+              src="images/gallery/gallery-mini.jpg"
+              alt="#"
+              class="gallery-middle__image grid__item--tablet-1-3 slider-image"
+            >
+
+            <img
+              src="images/gallery/gallery-tablet.jpg"
+              alt="#"
+              class="gallery-middle__image grid__item--tablet-4-6 slider-image"
+            >
+
+            <div class="scroll grid__item--tablet-3-4">
+              <div class="scroll__item"></div>
+              <div class="scroll__item"></div>
+              <div class="scroll__item"></div>
+              <div class="scroll__item"></div>
+            </div>
+          </div>
+
+          <div class="gallery-slider grid">
+            <div class="galley-slider__pictures-1
+            grid__item--desktop-1-4">
+              <img
+                src="images/gallery/gallery-1.jpg"
+                alt="#"
+                class="gallery-slider__image slider-image"
+              >
+            </div>
+
+            <div class="galley-slider__pictures-2
+            grid__item--desktop-5-12">
+              <img
+                src="images/gallery/gallery-2.jpg"
+                alt="#"
+                class="gallery-slider__image slider-image"
+              >
+            </div>
+
+            <div class="galley-slider__pictures-3
+            grid__item--desktop-1-8">
+              <img
+                src="images/gallery/gallery-3.jpg"
+                alt="#"
+                class="gallery-slider__image slider-image"
+              >
+            </div>
+
+            <div class="galley-slider__pictures-4
+            grid__item--desktop-9-12">
+              <img
+                src="images/gallery/gallery-4.jpg"
+                alt="#"
+                class="gallery-slider__image slider-image"
+              >
+            </div>
+          </div>
+        </div>
+      </section>
+
+      <section class="subscription" id="subscription">
+        <div class="container">
+          <div class="subscription__content grid-tablet__item--tablet-2-5">
+            <h2 class="subscription__title">
+              Підписка
+            </h2>
+
+            <p class="subscription__subtitle">
+              Бути в курсі всіх актуальних подій та останніх новин.
+            </p>
+
+            <form
+              action="#"
+              method="get"
+              class="subscription__form"
+            >
+              <label for="e-mail" class="subscription__input-container">
+
+                <input
+                  type="email"
+                  name="email"
+                  id="e-mail"
+                  class="subscription__input"
+                  placeholder="E-mail"
+                  required
+                >
+                <button class="subscription__submit" type="submit">
+                  <svg
+                    class="subscription__submit-image"
+                    width="8"
+                    height="12"
+                    viewBox="0 0 8 12"
+                    fill="black"
+                    xmlns="http://www.w3.org/2000/svg"
+                  >
+                    <path d="M0.590088 10.59L5.17009 6L0.590088 1.41L2.00009 0L8.00009 6L2.00009 12L0.590088 10.59Z"
+                      fill="black">
+                  </svg>
+                </button>
+              </label>
+            </form>
+          </div>
+        </div>
+      </section>
+    </main>
+
+    <footer class="footer">
+      <div class="container">
+        <div class="footer__content grid">
+
+          <div class="footer__container-image grid__item--1-2 grid__item--tablet-1-1
+          grid__item--desktop-1-2">
+            <a href="#" class="footer__logo logo">
+              <img
+                src="images/logo/logo.svg"
+                alt="logo"
+                class="logo__image"
+              >
+            </a>
+
+            <div class="footer__icons">
+              <a
+                href="https://www.facebook.com/"
+                class="footer__icons-link link"
+                target="_blanc"
+              >
+                <img src="images/icons/Facebook.svg" alt="Facebook">
+              </a>
+
+              <a
+                href="https://www.instagram.com/?hl=ru"
+                class="footer__icons-link link"
+                target="_blanc"
+              >
+                <img src="images/icons/instagram.svg" alt="instagram">
+              </a>
+            </div>
+
+          </div>
+
+          <div class="footer__schedul grid__item--tablet-2-3 grid__item--desktop-3-4">
+            <h4 class="footer__heading">
+              Графік роботи:
+            </h4>
+
+            <p class="footer__text">
+              <span class="footer__text-time">12:00 — 20:00</span> середа
+              <br>
+              <span class="footer__text-time">12:00 — 20:00</span>
+              четвер
+              <br>
+              <span class="footer__text-time">12:00 — 20:00</span> п’ятниця
+              <br>
+              <span class="footer__text-time">11:00 — 19:00</span> субота
+              <br>
+              <span class="footer__text-time">11:00 — 19:00</span> неділя
+              <br>
+              <br>
+              <span>Вихідні</span>:
+              <br>
+              понеділок, вівторок
+              <br>
+              Каса припиняє роботу за 1 годину
+              до закриття музею
+            </p>
+          </div>
+
+          <div class="footer__contacts grid__item--tablet-4-5 grid__item--desktop-5-6" id="contacts">
+            <h4 class="footer__heading">
+              Контакти:
+            </h4>
+
+            <a
+              href="https://goo.gl/maps/ctcEHhthGpTCP3W3A"
+              class="footer__adress"
+              target="_blank"
+              rel="noopener noreferrer"
+            >
+              вул. М. Грушевського, 6; Київ, 01001
+              тел. +38 (044) 278-13-57
+              факс +38 (044) 278-74-54
+            </a>
+            <br>
+            <a href="mailto:info@namu.kiev.ua" class="footer__mail">
+              e-mail: info@namu.kiev.ua
+            </a>
+          </div>
+
+          <div class="scrollTop grid__item--2-2">
+            <a class="scrollTop__link" href="#page-top">↑</a>
+          </div>
+
+          <div class="footer__line grid__item--1-2 grid__item--tablet-2-5 grid__item--desktop-7-7"></div>
+
+          <ul class="footer__nav grid__item--tablet-2-3 grid__item--desktop-8-9">
+            <li class="footer__nav-list">
+              <a href="#gallery" class="footer__nav-link">Галерея</a>
+            </li>
+            <li class="footer__nav-list">
+              <a href="#exhibitions" class="footer__nav-link">Виставки та події</a>
+            </li>
+          </ul>
+
+          <ul class="footer__nav grid__item--tablet-4-5 grid__item--desktop-10-11">
+            <li class="footer__nav-list">
+              <a href="#email" class="footer__nav-link">Про Нас</a>
+            </li>
+            <li class="footer__nav-list">
+              <a href="#email" class="footer__nav-link">Контакти</a>
+            </li>
+          </ul>
+
+        </div>
+        <div class="footer__basic">
+          <p class="footer__author ">Designed by Zhyriada Marina</p>
+
+          <p class="footer__rights">
+            Copyright © 2019. All Rights Reserved.
+          </p>
+        </div>
+      </div>
+    </footer>
     <script type="text/javascript" src="scripts/main.js"></script>
   </body>
 </html>
