--- a/src/index.html
+++ b/src/index.html
@@ -16,27 +16,28 @@
   </head>
   <body>
 
-    <header class="header">
+    <header class="header" id="main">
       <div class="container grid container--header">
-        
 
-        <a href="#" class="header__link header__link--menu grid__item grid__item--1-2">
-          <img src="./images/menu.png" alt="menu" class="header__icon">
-        </a>
-
-        <a href="#" class="header__link header__link--logo  grid__item grid__item--6-7">
-          <img src="./images/logo.png" alt="menu" class="header__icon">
-        </a>
-
-        <nav class="header__mobile-nav">
-          <div class="header__mobile-flex">
-            <a href="#" class="header__mobile-link header__mobile-link--menu">
-              <img src="./images/menu.png" alt="menu" class="header__icon">
-            </a>
-            <a href="#" class="header__mobile-link header__mobile-link--logo">
+        <nav class="header__nav grid__item grid__item--1-7">
+          <div class="header__wrapper">
+            <div class="header__menu menu menu--mobile grid__item grid__item--1-2" id="menu-container">
+              <label  id="header-burger" for="menu__toggle" class="menu__btn">
+                <span></span>
+              </label>
+              <ul class="menu__box">
+                <li><a class="menu__item" href="#main">Головна</a></li>
+                <li><a class="menu__item" href="#actual">Актуальні події</a></li>
+                <li><a class="menu__item" href="#">Галерея</a></li>
+                <li><a class="menu__item" href="#">Підписка</a></li>
+                <li><a class="menu__item" href="#">Контакти:</a></li>
+              </ul>
+            </div>
+            <a href="#" class="header__link header__link--logo  grid__item grid__item--6-7">
               <img src="./images/logo.png" alt="menu" class="header__icon">
             </a>
           </div>
+
         </nav>
 
         <div class="header__left grid__item grid__item--1-5">
@@ -56,7 +57,7 @@
     </header>
 
     <main>
-      <section class="actual">
+      <section class="actual" id="actual">
         <div class="container">
           <div class="grid">
             <h2 class="actual__title grid__item grid__item--1-5">Актуальні події</h2>
@@ -68,8 +69,10 @@
             <div class="card__info grid__item grid__item--9-12">
               <p class="card__subtitle">ВИСТАВКА</p>
               <p class="card__date">26.08-29.11.2019</p>
-              <h3 class="card__title">Йду і повертаюсь
-              </h3>
+              <a class="card__link" href="#">
+                <h3 class="card__title">Йду і повертаюсь
+                </h3>
+              </a>
               <p class="card__text">Національний Художній Музей України презентує унікальну частину колекції Градобанку - українське мистецтво другої половини 1980-1995 років.</p>
             </div>
 
@@ -81,8 +84,10 @@
             <div class="card__info grid__item grid__item--9-12">
               <p class="card__subtitle">ВИСТАВКА</p>
               <p class="card__date">226.08-29.11.2019</p>
-              <h3 class="card__title">І спогади і мрії
-              </h3>
+              <a href="#" class="card__link">
+                <h3 class="card__title">І спогади і мрії
+                </h3>
+              </a>
               <p class="card__text">Національний художній музей України до 100 річчя від дня народження   видатної української художниці  Тетяни Яблонської  відкриває ретроспективну ювілейну виставку «І спогади і мрії».</p>
             </div>
 
