--- a/src/index.html
+++ b/src/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="uk" class="page">
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -52,9 +52,17 @@
             <h1 class="header__title">
               ХУДОЖНІЙ <br> МУЗЕЙ
             </h1>
-            <div class="header__add-info">ПОДІЇ
+            <a
+              href="#actualni-podii"
+              class="header__add-info"
+            >
+              ПОДІЇ
               <div class="header__add-info-line"></div>
-            </div>
+            </a>
+
+
+
+
           </div>
 
           <div class="tiquets header__tiquets">
@@ -268,34 +276,34 @@
             <p>Бути в курсі всіх актуальних подій та останніх новин.</p>
           </div>
 
-          <div class="tiquets tiquets--orange header__tiquets">
-            <form
-              action="#"
-              method="post"
-              class="tiquets__form"
+          <form
+            action="#"
+            class="tiquets tiquets--orange header__tiquets"
+          >
+            <label
+              for="email"
+              class="tiquets__botton
+              tiquets__botton--white"
             >
-              <div class="tiquets__botton tiquets__botton--white">
-                <label for="email" class="tiquets__label">
-                  <input
-                    id="email"
-                    name="email"
-                    type="email"
-                    placeholder="Email"
-                    class="tiquets__input"
-                    required
-                  >
-                </label>
-              </div>
-              <div class="tiquets__botton-2 tiquets__botton-2--orange">
-                <button class="tiquets__input tiquets__input--orange">
-                  <img
-                    src="../src/images/signs/Vector_2.png"
-                    alt="arrow"
-                  >
-                </button>
-              </div>
-            </form>
-          </div>
+              <input
+                id="email"
+                name="email"
+                type="email"
+                placeholder="Email"
+                class="tiquets__input"
+                required
+              >
+            </label>
+            <button
+              class="tiquets__botton-2
+              tiquets__botton-2--orange"
+            >
+              <img
+                src="../src/images/signs/Vector_2.png"
+                alt="arrow"
+              >
+            </button>
+          </form>
         </div>
       </div>
     </main>
@@ -314,7 +322,7 @@
 
                 <div class="footer__social-media">
                   <div class="footer__social-media-facebook">
-                    <a href="#">
+                    <a href="#" target="blank">
                       <img
                       src="../src/images/features/Facebook.png"
                       alt="facebook-logo"
@@ -324,7 +332,7 @@
                   </div>
 
                   <div class="footer__social-media-instagram">
-                    <a href="#">
+                    <a href="#" target="blank">
                       <img
                       src="../src/images/features/black-instagram-icon-png-6.jpg"
                       alt="facebook-logo"
@@ -360,20 +368,28 @@
                     <a
                       href="https://goo.gl/maps/rRmCCwYJZENyuKPy6"
                       class="contacts__link"
+                      target="blank"
                     >
                       вул. М. Грушевського, 6; Київ, 01001<br>
                     </a>
                     <a
                       href="tel: +38(044)278-13-57"
                       class="contacts__link"
+                      target="blank"
                     >
                       тел. +38 (044) 278-13-57<br>
                     </a>
+                    <a
+                      href="tel: +38 (044) 278-74-54"
+                      class="contacts__link"
+                      target="blank"
+                    >
                       факс +38 (044) 278-74-54<br>
-
+                    </a>
                     <a
                       href="mailto: e-mail: info@namu.kiev.ua"
                       class="contacts__link"
+                      target="blank"
                     >
                       e-mail: info@namu.kiev.ua
                     </a>
