--- a/src/index.html
+++ b/src/index.html
@@ -94,8 +94,22 @@
           </div>
 
         </div>
-
       </section>
+
+      <section class="lection">
+        <img src="./images/actual.jpg" alt="img" class="lection__image">
+        <div class="lection__wrapper grid">
+          <div class="lection__info grid__item grid__item--4-9">
+            <p class="lection__subtitle">ВИСТАВКА</p>
+            <p class="lection__date">26.08-29.11.2019</p>
+            <a class="lection__link" href="#">
+              <h3 class="lection__title">Йду і повертаюсь
+              </h3>
+            </a>
+          </div>
+        </div>
+      </section>
+      
     </main>
 
     <script type="text/javascript" src="scripts/main.js"></script>
