changes was added

--- a/src/index.html
+++ b/src/index.html
@@ -43,6 +43,10 @@
             <a href="#contacts" class="header__tickets-link"></a>
           </div>
         </div>
+        <div class="header__notice">
+          <div class="header__notice-line"></div>
+          <p class="header__notice-text">ПОДІЇ</p>
+        </div>
       </header>
 
 
