--- a/src/index.html
+++ b/src/index.html
@@ -45,7 +45,7 @@
         </div>
         <div class="header__notice">
           <div class="header__notice-line"></div>
-          <p class="header__notice-text">ПОДІЇ</p>
+          <a href="#exhibitions" class="header__notice-text">ПОДІЇ</a>
         </div>
       </header>
 
@@ -252,12 +252,17 @@
 
         <div class="footer__contacts-box">
           <p class="footer__contacts-title" id="contacts">Контакти:</p>
-          <p class="footer__contacts-info">
+          
+          <a
+            href="https://goo.gl/maps/vdBMNaCQFfogpEpP8"
+            class="footer__contacts-info-link"
+            target="_blank"
+          >
             вул. М. Грушевського, 6; Київ, 01001
-            тел. +38 (044) 278-13-57
-            факс +38 (044) 278-74-54
-            e-mail: info@namu.kiev.ua
-          </p>
+          </a>
+          <a href="tel:+38 044 278-13-57" class="footer__contacts-info-link">тел. +38 (044) 278-13-57</a>
+          <a href="tel:+38 044 278-74-54" class="footer__contacts-info-link">факс +38 (044) 278-74-54</a>
+          <a href="mailto:info@namu.kiev.ua" class="footer__contacts-info-link">e-mail: info@namu.kiev.ua</a>
         </div>
 
         <div class="footer__up-box">
