--- a/src/index.html
+++ b/src/index.html
@@ -97,11 +97,33 @@
     <section class="gallery">
       <div class="container">
         <div class="events__title title">
-
+          Галерея
         </div>
       </div>
     </section>
-    <section class="subscribe"></section>
+    <section class="subscribe">
+      <div class="container">
+        <div class="subscribe__body">
+          <div class="subscribe__title">
+            Підписка
+          </div>
+          <div class="subscribe__text">
+            Бути в курсі всіх актуальних подій та останніх новин.
+          </div>
+          <form action="#" class="subscribe__form">
+            <label for="email"></label>
+            <input
+              name="email"
+              id="email"
+              class="subscribe__email"
+              placeholder="E-mail"
+              type="email">
+
+            <a href="#" class="subscribe__btn"></a>
+          </form>
+        </div>
+      </div>
+    </section>
 
     <footer class="footer">
       <div class="container">
