--- a/src/index.html
+++ b/src/index.html
@@ -94,13 +94,11 @@
                 </div>
               </a>
 
-              <a href="#events">
-                <div class="museum__action">
-                  <div class="museum__action--stick"></div>
+              <a href="#events" class="museum__action">
+                <div class="museum__action--stick"></div>
 
-                  <div class="museum__action--title">
-                    Події
-                  </div>
+                <div class="museum__action--title">
+                  Події
                 </div>
               </a>
             </div>
