--- a/src/index.html
+++ b/src/index.html
@@ -156,8 +156,34 @@
           </div>
         </div>
       </section>
+
+      <section class="subscription" id="subscription">
+        <div class="container subscription__wrapper grid">
+          <div class="subscription__info  grid__item grid__item--4-9">
+            <h2 class="subscription__title grid__item grid__item--5-8">Підписка</h2>
+            <p class="subscription__text grid__item grid__item--4-9">Бути в курсі всіх актуальних подій та останніх новин.</p>
+          </div>
+
+          <label for="input">
+            <input
+              type="email"
+              class="subscription__input grid__item grid__item--4-8"
+              id="input"
+              name="input"
+              placeholder="E-mail"
+              required
+            >
+          </label>
+          <a href="#" class="subscription__button grid__item grid__item--9-9">
+            <img src="./images/btn.png" alt="btn" class="subscription__img subscrioption__img--btn">
+
+            <img src="./images/arrow.png" alt="btn" class="subscription__img subscrioption__img--arrow">
+          </a>
+        </div>
+      </section>
       
     </main>
+
     <script type="module">
       import Swiper from 'https://unpkg.com/swiper@8/swiper-bundle.esm.browser.min.js'
     
