--- a/src/index.html
+++ b/src/index.html
@@ -51,6 +51,35 @@
         </div>
       </header>
 
+      <section class="menu page-container__menu" id="menu">
+        <div class="menu__top">
+          <a href="https://maxxnikiforov.github.io/Museum/" class="menu__closer"></a>
+          <a href="https://maxxnikiforov.github.io/Museum/" class="menu__logo">
+            <img
+              class="logo__img-l"
+              src="./images/logo-svg.svg"
+              alt="Natsionalnij hudozhnij muzej Ukrayini Kiyiv"
+            >
+          </a>
+        </div>
+
+        <div class="menu__nav">
+          <ul class="menu__list">
+            <li class="menu__item">
+              <a href="#gallery" class="menu__link">Галерея</a>
+            </li>
+            <li class="menu__item">
+              <a href="#exhibitions" class="menu__link">Виставки та події</a>
+            </li>
+            <li class="menu__item">
+              <a href="#subscription" class="menu__link">Про Нас</a>
+            </li>
+            <li class="menu__item">
+              <a href="#contacts" class="menu__link">Контакти</a>
+            </li>
+          </ul>
+        </div>
+      </section>
 
       <section class="events page-container__events">
 
@@ -180,7 +209,7 @@
         </div>
       </section>
 
-      <section class="subscription page-container__subscription">
+      <section class="subscription page-container__subscription" id="subscription">
         <h2 class="subscription__title">Підписка</h2>
         <p class="subscription__text">
           Бути в курсі всіх актуальних подій та останніх новин.
