--- a/src/index.html
+++ b/src/index.html
@@ -25,6 +25,7 @@
 
         <nav class="header__nav grid__item grid__item--1-7">
           <div class="header__wrapper">
+
             <div class="header__menu menu menu--mobile grid__item grid__item--1-2" id="menu-container">
               <label  id="header-burger" for="menu__toggle" class="menu__btn">
                 <span></span>
@@ -37,9 +38,11 @@
                 <li><a class="menu__item" href="#contacts">Контакти:</a></li>
               </ul>
             </div>
+
             <a href="#" class="header__link header__link--logo  grid__item grid__item--6-7">
               <img src="./images/logo.png" alt="menu" class="header__icon">
             </a>
+
           </div>
 
         </nav>
@@ -163,25 +166,31 @@
             <h2 class="subscription__title grid__item grid__item--5-8">Підписка</h2>
             <p class="subscription__text grid__item grid__item--4-9">Бути в курсі всіх актуальних подій та останніх новин.</p>
           </div>
-
-          <form action="get" class="subscription__form  grid__item grid__item--4-8">
-            <label for="input">
-              <input
-                type="email"
-                class="subscription__input"
-                id="input"
-                name="input"
-                placeholder="E-mail"
-                required
-              >
-            </label>
-          </form>
-          <a href="#" class="subscription__button grid__item grid__item--9-9">
-            <img src="./images/btn.png" alt="btn" class="subscription__img subscrioption__img--btn">
-
-            <img src="./images/arrow.png" alt="btn" class="subscription__img subscrioption__img--arrow">
-          </a>
         </div>
+
+        <form action="get" class="subscription__form grid subscription__wrapper">
+          <label for="input" class="subscription__label grid__item grid__item--4-8">
+            <input
+              type="email"
+              class="subscription__input"
+              id="input"
+              name="input"
+              placeholder="E-mail"
+              required
+            >
+          </label>
+
+          <button type="submit" class="subscription__button grid__item grid__item--9-9">
+
+            <div class="subscription__button">
+              <a href="#" class="wrapper wrapper--sub subscription__button btn-0">
+                <span>></span>
+              </a>
+            </div>
+
+          </button>
+          
+        </form>
       </section>
       
     </main>
