--- a/src/index.html
+++ b/src/index.html
@@ -35,7 +35,7 @@
                 <li><a class="menu__item" href="#actual">Актуальні події</a></li>
                 <li><a class="menu__item" href="#gallery">Галерея</a></li>
                 <li><a class="menu__item" href="#subscription">Підписка</a></li>
-                <li><a class="menu__item" href="#contacts">Контакти:</a></li>
+                <li><a class="menu__item" href="#contacts">Контакти</a></li>
               </ul>
             </div>
 
@@ -51,7 +51,7 @@
           <h1 class="header__title">ХУДОЖНІЙ МУЗЕЙ</h1>
 
           <div class="header__button">
-            <a href="#" class="wrapper header__button header__button--1 btn-0"><span>КВИТКИ</span></a>
+            <a href="#subscription" class="wrapper header__button header__button--1 btn-0"><span>КВИТКИ</span></a>
             <a href="#" class="header__button header__button--2 btn-0">
               <p class="header__button-text">></p>
             </a>
@@ -161,6 +161,7 @@
       </section>
 
       <section class="subscription" id="subscription">
+
         <div class="container subscription__wrapper grid">
           <div class="subscription__info  grid__item grid__item--4-9">
             <h2 class="subscription__title grid__item grid__item--5-8">Підписка</h2>
@@ -192,6 +193,142 @@
           
         </form>
       </section>
+
+      <footer class="footer">
+        <div class="container grid">
+
+          <div class="footer__icons grid__item grid__item--1-1">
+
+            <a href="#main" class="footer__link">
+              <img src="./images/logo.png" alt="logo" class="footer__logo">
+            </a>
+
+            <div class="footer__socials">
+              <a href="https://www.facebook.com/" class="footer__link" target="_blank">
+                <svg
+                  class="footer__img footer__img--fb"
+                  width="12"
+                  height="24"
+                  viewBox="0 0 12 24"
+                  fill="none"
+                  xmlns="http://www.w3.org/2000/svg"
+                >
+                  <path class="footer__img footer__img--fb" d="M2.80696 4.64899C2.80696 5.2538 2.80696 7.9533 2.80696 7.9533H0.389893V11.9938H2.80696V24.0009H7.77214V11.9942H11.104C11.104 11.9942 11.416 10.0568 11.5673 7.93841C11.1336 7.93841 7.79091 7.93841 7.79091 7.93841C7.79091 7.93841 7.79091 5.58776 7.79091 5.17573C7.79091 4.76282 8.33227 4.2074 8.86733 4.2074C9.40138 4.2074 10.5286 4.2074 11.5725 4.2074C11.5725 3.65727 11.5725 1.75647 11.5725 0.000976577C10.1788 0.000976577 8.59328 0.000976577 7.89437 0.000976577C2.68423 0.000697581 2.80696 4.04524 2.80696 4.64899Z" fill="black">
+                </svg>
+              </a>
+
+              <a href="https://www.instagram.com/" class="footer__link" target="_blank">
+
+                <svg
+                  class="footer__img footer__img--ig"
+                  width="25" height="24"
+                  viewBox="0 0 25 24" fill="none"
+                  xmlns="http://www.w3.org/2000/svg"
+                >
+                  <path
+                    class="footer__img footer__img--ig"
+                    d="M17.5908 0H6.58397C3.0017 0 0.0874023 2.9143 0.0874023 6.49657V17.5036C0.0874023 21.0857 3.0017 24 6.58397 24H17.591C21.1731 24 24.0874 21.0857 24.0874 17.5036V6.49657C24.0874 2.9143 21.1731 0 17.5908 0V0ZM12.0874 18.5623C8.46886 18.5623 5.52507 15.6185 5.52507 12C5.52507 8.38145 8.46886 5.43767 12.0874 5.43767C15.7059 5.43767 18.6497 8.38145 18.6497 12C18.6497 15.6185 15.7059 18.5623 12.0874 18.5623ZM18.8066 6.98528C17.7373 6.98528 16.8675 6.11553 16.8675 5.04619C16.8675 3.97686 17.7373 3.10693 18.8066 3.10693C19.8759 3.10693 20.7459 3.97686 20.7459 5.04619C20.7459 6.11553 19.8759 6.98528 18.8066 6.98528Z"
+                    fill="black"
+                  >
+                </svg>
+              </a>
+            </div>
+          </div>
+
+          <div class="footer__schedule grid__item grid__item--3-4">
+            <p class="footer__title">Графік роботи</p>
+
+            <p class="footer__text">
+              <span class="footer__bold">12:00
+                — 20:00
+              </span> середа
+            </p>
+
+            <p class="footer__text">
+              <span class="footer__bold">12:00
+                — 20:00
+              </span> четвер
+            </p>
+
+            <p class="footer__text">
+              <span class="footer__bold">12:00
+                — 20:00
+              </span> п’ятниця
+            </p>
+
+            <p class="footer__text">
+              <span class="footer__bold">11:00 — 19:00</span> субота
+            </p>
+
+            <p class="footer__text">
+              <span class="footer__bold">11:00 — 19:00</span> неділя
+            </p>
+            <br>
+            <p class="footer__text">
+              <span class="footer__bold">Вихідні:</span>  понеділок, вівторок
+              Каса припиняє роботу за 1 годину
+              до закриття музею
+            </p>
+
+
+          </div>
+
+          <div class="footer__contacts grid__item grid__item--5-6" id="contacts">
+            <p class="footer__title">
+              Контакти:
+            </p>
+            <p class="footer__text">вул. М. Грушевського, 6; Київ, 01001
+              тел. +38 (044) 278-13-57
+              факс +38 (044) 278-74-54
+              e-mail: info@namu.kiev.ua
+            </p>
+          </div>
+
+          <a href="#main" class="footer__button grid__item grid__item--2-3">
+            <svg
+              class="footer__img"
+              width="10" height="12"
+              viewBox="0 0 10 12"
+              fill="none"
+              xmlns="http://www.w3.org/2000/svg"
+            >
+              <path class="footer__img" d="M5 0L0 5L0.705 5.705L4.5 1.915V12H5.5V1.915L9.295 5.705L10 5L5 0Z" fill="#1A5A4C">
+            </svg>
+          </a>
+
+          <div class="footer__line grid__item grid__item--7-7">
+            <span></span>
+          </div>
+
+          <nav class="footer__nav grid__item grid__item--8-10">
+
+            <div class="footer__nav-wrapper">
+              <a href="#gallery" class="footer__link">
+                <p class="footer__text">Галерея</p>
+              </a>
+              <a href="#main" class="footer__link">
+                <p class="footer__text">Виставки та події</p>
+              </a>
+            </div>
+
+            <div class="footer__nav-wrapper">
+              <a href="#subscription" class="footer__link">
+                <p class="footer__text">Про Нас</p>
+              </a>
+              <a href="#contacts" class="footer__link">
+                <p class="footer__text">Контакти</p>
+              </a>
+            </div>
+
+          </nav>
+
+          <div class="footer__copyright grid__item grid__item--1-12">
+            <div>Copyright © 2019. All Rights Reserved.</div>
+            <div>Designed by Zhyriada Marina</div>
+          </div>
+
+        </div>
+      </footer>
       
     </main>
 
