--- a/src/index.html
+++ b/src/index.html
@@ -24,7 +24,7 @@
               src="images/icons/menu.png"
               alt="menu">
           </a>
-          <a class="header__logo">
+          <a class="header__logo" href="#">
             NA<br>MU
           </a>
           <div class="header__zaglushka">
@@ -45,17 +45,17 @@
             ХУДОЖНІЙ МУЗЕЙ
           </h3>
           <div class="header__btn">
-            <a href="#" class="header__link">Квитки</a>
-            <a href="#" class="header__arrow"></a>
+            <a href="##subscribe" class="header__link">Квитки</a>
+            <a href="##subscribe" class="header__arrow"></a>
           </div>
           <div class="header__events">
-            <a href="#" class="header__events-link">Події</a>
+            <a href="##events" class="header__events-link">Події</a>
           </div>
         </div>
       </div>
     </header>
 
-    <section class="events">
+    <section class="events" id="#events">
       <div class="container">
         <div class="events__title title">
           Актуальні події
@@ -118,7 +118,7 @@
 
       </div>
     </section>
-    <section class="lesson">
+    <section class="lesson" id="#lesson">
       <div class="container">
         <div class="lesson__column">
           <div class="lesson__body">
@@ -134,16 +134,57 @@
       </div>
     </section>
 
-    <section class="gallery">
+    <section class="gallery" id="#gallery">
       <div class="container">
         <div class="events__title title">
           Галерея
         </div>
 
+        <div class="gallery__body">
+
+          <div class="gallery__row grid__first">
+
+            <div class="gallery__first">
+              <img
+                class="gallery__img"
+                src="images/gallery/1.png"
+                alt="gallery photo"
+              >
+            </div>
+
+            <div class="gallery__second img-display img-tablet">
+              <img
+                class="gallery__img"
+                src="images/gallery/2.png"
+                alt="gallery photo"
+              >
+            </div>
+
+          </div>
+
+          <div class="gallery__row grid__second">
+            <div class="gallery__third img-display">
+              <img
+                class="gallery__img"
+                src="images/gallery/3.png"
+                alt="gallery photo"
+              >
+            </div>
+            <div class="gallery__fourth img-display">
+              <img
+                class="gallery__img"
+                src="images/gallery/4.png"
+                alt="gallery photo"
+              >
+            </div>
+          </div>
+
+        </div>
+
       </div>
     </section>
 
-    <section class="subscribe">
+    <section class="subscribe" id="#subscribe">
       <div class="container">
         <div class="subscribe__body">
           <div class="subscribe__title">
@@ -167,7 +208,7 @@
       </div>
     </section>
 
-    <footer class="footer">
+    <footer class="footer" id="#footer">
       <div class="container">
         <div class="footer__body">
           <div class="footer__top-row">
