Fixes after review

--- a/src/index.html
+++ b/src/index.html
@@ -31,8 +31,15 @@
             <img class="header__logoimage" src="images/logo.svg" alt="Museum of Art">
           </a>
         </div>
+
         <div class="grid">
           <div class="museumart grid__item--1-2">
+            <div class="museumart__notice">
+              <div class="museumart__notice-stripe"></div>
+              <a href="#events">
+                <p class="museumart__notice-text">події</p>
+              </a>
+            </div>
             <p class="museumart__text">
               художній
               <br>
@@ -49,12 +56,6 @@
                 </div>
               </div>
             </a>
-            <div class="museumart__notice">
-              <div class="museumart__notice-stripe"></div>
-              <a href="#events">
-                <p class="museumart__notice-text">події</p>
-              </a>
-            </div>
           </div>
         </div>
       </section>
@@ -293,13 +294,15 @@
           </div>
           <div class="footer__contactus grid__item--2-2">
             <p class="footer__contacttext scedule__title">Контакти:</p>
-            <p class="footer__contactadress">
-              вул. М. Грушевського, 6;
-              Київ, 01001
-              тел. +38 (044) 278-13-57
-              факс +38 (044) 278-74-54
-              e-mail: info@namu.kiev.ua
-            </p>
+            <a href="https://goo.gl/maps/hdAVE6DNhceBsfTG6" target="_blank">
+              <p class="footer__contactadress">
+                вул. М. Грушевського, 6;
+                Київ, 01001
+                тел. +38 (044) 278-13-57
+                факс +38 (044) 278-74-54
+                e-mail: info@namu.kiev.ua
+              </p>
+            </a>
           </div>
           <div class="footer__strip grid__item--1-2"></div>
 
