Fixes after review2

--- a/src/index.html
+++ b/src/index.html
@@ -294,15 +294,16 @@
           </div>
           <div class="footer__contactus grid__item--2-2">
             <p class="footer__contacttext scedule__title">Контакти:</p>
-            <a href="https://goo.gl/maps/hdAVE6DNhceBsfTG6" target="_blank">
-              <p class="footer__contactadress">
-                вул. М. Грушевського, 6;
-                Київ, 01001
-                тел. +38 (044) 278-13-57
-                факс +38 (044) 278-74-54
-                e-mail: info@namu.kiev.ua
-              </p>
-            </a>
+
+            <p class="footer__contactadress">
+              <a href="https://goo.gl/maps/hdAVE6DNhceBsfTG6" target="_blank">
+                вул. М. Грушевського, 6; Київ, 01001
+              </a>
+              <a href="tel:+380442781357">тел. +38 (044) 278-13-57</a>
+              <a href="tel:+380442787454">факс +38 (044) 278-74-54</a>
+              <a href="mailto:info@namu.kiev.ua">e-mail: info@namu.kiev.ua</a>
+            </p>
+
           </div>
           <div class="footer__strip grid__item--1-2"></div>
 
