Fixes after review

--- a/src/index.html
+++ b/src/index.html
@@ -296,12 +296,12 @@
             <p class="footer__contacttext scedule__title">Контакти:</p>
 
             <p class="footer__contactadress">
-              <a href="https://goo.gl/maps/hdAVE6DNhceBsfTG6" target="_blank">
+              <a href="https://goo.gl/maps/hdAVE6DNhceBsfTG6" target="_blank" class="footer__linkcontact">
                 вул. М. Грушевського, 6; Київ, 01001
               </a>
-              <a href="tel:+380442781357">тел. +38 (044) 278-13-57</a>
-              <a href="tel:+380442787454">факс +38 (044) 278-74-54</a>
-              <a href="mailto:info@namu.kiev.ua">e-mail: info@namu.kiev.ua</a>
+              <a href="tel:+380442781357" class="footer__linkcontact">тел. +38 (044) 278-13-57</a>
+              <a href="tel:+380442787454" class="footer__linkcontact">факс +38 (044) 278-74-54</a>
+              <a href="mailto:info@namu.kiev.ua" class="footer__linkcontact">e-mail: info@namu.kiev.ua</a>
             </p>
 
           </div>
