--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,8 @@
     <title>NAMU</title>
     <link rel="icon" href="./images/NA MU.svg">
     <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin="true">
+    <link rel="preconnect" href="https://fonts.gstatic.com"
+      crossorigin="true">
     <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@300;400;500;600;700&family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./styles/main.scss">
   </head>
@@ -53,7 +54,11 @@
         <div class="menu__content">
           <div class="menu__top">
             <a href="#" class="menu__icon">
-              <img src="./images/close.svg" alt="icon-menu" class="menu__icon-close">
+              <img
+                src="./images/close.svg"
+                alt="icon-menu" 
+                class="menu__icon-close"
+              >
             </a>
             <div class="menu__logo">
               <img src="./images/NA MU.svg" alt="logo">
